--- a/PathWatcher/PathWatcher.csproj
+++ b/PathWatcher/PathWatcher.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
-		<RootNamespace>FilesWatcher</RootNamespace>
+		<RootNamespace>PathWatcher</RootNamespace>
 		<PublishSingleFile>True</PublishSingleFile>
 	</PropertyGroup>
 
